--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li data-target="#carouselIndicators" data-slide-to="6"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url('image/slider/ima01.jpg')">
+          <div class="carousel-item active" style="background-image: url('image/slider/ima01.png')">
             <div class="carousel-caption d-none d-md-block">
             <!--  
               <h3>First Slide</h3>
@@ -41,37 +41,37 @@
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('image/slider/ima02.jpg')">
+          <div class="carousel-item" style="background-image: url('image/slider/ima02.png')">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('image/slider/ima03.jpg')">
+          <div class="carousel-item" style="background-image: url('image/slider/ima03.png')">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('image/slider/ima04.jpg')">
+          <div class="carousel-item" style="background-image: url('image/slider/ima04.png')">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('image/slider/ima05.jpg')">
+          <div class="carousel-item" style="background-image: url('image/slider/ima05.png')">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('image/slider/ima06.jpg')">
+          <div class="carousel-item" style="background-image: url('image/slider/ima06.png')">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('image/slider/ima07.jpg')">
+          <div class="carousel-item" style="background-image: url('image/slider/ima07.png')">
             <div class="carousel-caption d-none d-md-block">
 
             </div>
@@ -90,11 +90,21 @@
       </div>
 
       <div class="main-text hidden-xs">
-          <div class="col-md-12 text-center">
-              <h1>&Aacute;RY OJASOJAVO</h1>
-              <br/>
-              <h3>Espacio abierto al tiempo de los saberes ancestrales y populares.</h3>
+        <div class="col-md-12 text-top">
+          <img class="imgLogo" src="image/icon/logo.svg">
+        </div>
+        <div class="col-md-12 text-center">
+          <h1>&Aacute;RY OJASOJAVO</h1>
+          <br/>
+          <h3>Espacio abierto al tiempo de los saberes ancestrales y populares.</h3>
+          <br/>
+          <div style="height:50px; width:100%;">
+            <a href="mailto:hola@ary.org.py"><img class="imgsocial1" src="image/redes/email.svg"></a>
+            <a href="https://www.facebook.com/aryojasojavo" target="_blank"><img class="imgsocial2"  src="image/redes/facebook.svg"></a>
+            <a href="https://www.instagram.com/ary_ojasojavo/" target="_blank"><img class="imgsocial3" src="image/redes/instagram.svg"></a>
+            <a href="https://www.youtube.com/channel/UCr7nGR_kemDe1tYgDuN16gw/featured?disable_polymer=1" target="_blank"><img class="imgsocial4" src="image/redes/youtube.svg"></a>
           </div>
+        </div>
       </div>
     </header>
 
